--- a/index.html
+++ b/index.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Todo List</title>
+
+  <!-- Menghubungkan file CSS eksternal -->
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
+  <!-- Container utama untuk seluruh tampilan to-do list -->
   <div class="todo-container">
     <h2>Todo List</h2>
+
+    <!-- Form input untuk menambahkan tugas baru -->
     <div class="form">
       <input type="text" id="taskInput" placeholder="Add a todo ..." />
       <input type="date" id="dateInput" />
       <button id="addBtn">+</button>
     </div>
+
+    <!-- Tombol aksi tambahan -->
     <div class="actions">
       <button id="filterBtn">FILTER</button>
       <button id="deleteAllBtn">DELETE ALL</button>
     </div>
 
+    <!-- Tabel untuk menampilkan daftar tugas -->
     <table class="todo-table">
       <thead>
         <tr>
@@ -31,10 +39,13 @@
         </tr>
       </thead>
       <tbody id="todoList">
+        <!-- Baris default jika belum ada tugas -->
         <tr><td colspan="4" class="empty">No task found</td></tr>
       </tbody>
     </table>
   </div>
+
+  <!-- Menghubungkan file JavaScript eksternal -->
   <script src="js/script.js"></script>
 </body>
 </html>
